--- a/wiki/CloudAPIs.wiki
+++ b/wiki/CloudAPIs.wiki
@@ -1,4 +1,6 @@
 #labels Phase-Implementation
+#Information considering the connection between the application and the cloud services.
+
 = Introduction =
 
 The application must include the option to backup the selected databases to a cloud service or multiple cloud services. Therefore, there is the need to study and learn each cloud service's API, in order to be able to intergrade that feature.
@@ -14,7 +16,7 @@ Each one of us must find the way to connect the application with (at least) one 
 
 *Dropbox*
 
-*Google Drive*
+*Google drive*
 
-*Microsoft OneDrive*
+*Microsoft onedrive*
 The operation can be implemented with the Live SDK REST API.
