--- a/trunk/MySQLBackUp/MySQLBackUp/My Project/Resources.resx
+++ b/trunk/MySQLBackUp/MySQLBackUp/My Project/Resources.resx
@@ -124,13 +124,22 @@
   <data name="dropbox" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dropbox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="facebook" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Facebook-04.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="googledrive" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\googledrive.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="googlePlus" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Google-Plus-Logo-50x50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="onedrive" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\onedrive.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="sftp" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sftp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="twitter" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\twitter_50.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
